# yandex_music_presence

./: README.md  config.json  main.py  pyproject.toml  requirements.txt
app/: load_config.py
